--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="card">
             <div class="card__border">
                 <div class="card__perfil">
-                    <img src="https://o.remove.bg/downloads/c0f2c05c-d3d7-42b6-b99d-83c6d11e3d5b/image-removebg-preview.png"
+                    <img src="https://github.com/J3ipy.png"
                         alt="perfil" class="card__img">
                 </div>
             </div>
@@ -31,7 +31,7 @@
 
                 <div class="info__border">
                     <div class="info__perfil">
-                        <img src="https://o.remove.bg/downloads/c0f2c05c-d3d7-42b6-b99d-83c6d11e3d5b/image-removebg-preview.png"
+                        <img src="https://github.com/J3ipy.png"
                             alt="" class="info__img">
                     </div>
                 </div>
